# dprint-plugin-java

./: .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  GRANARY_RECONCILIATION.md  LICENSE  PJF_COMPARISON_REPORT.md  PJF_COMPARISON_REPORT_PR3837.md  PJF_PARITY_GAPS.md  PLAN.md  README.md  TASKS_CREATED.md  build.rs  update_specs.py
.cargo/: config.toml
.claude/commands/: compare-pjf.md
.github/workflows/: ci.yml
comparison_examples/: README.md  arglist_wrapping_TypesTests.diff  blank_lines_SDK.diff
examples/: ComplexExample.java  HelloWorld.java  VALIDATION_RESULTS.md  dprint.json
scripts/: wasm32-ar.sh  wasm32-clang.sh
skills/compare-pjf/: SKILL.md
skills/compare-pjf/scripts/: compare.sh  normalize.py
src/: format_text.rs  lib.rs  wasm_libc_shims.c  wasm_plugin.rs  wasm_shims.rs
src/configuration/: configuration.rs  resolve_config.rs
src/generation/: comments.rs  context.rs  declarations.rs  expressions.rs  generate.rs  helpers.rs  mod.rs  statements.rs
tests/: spec_test.rs  update_specs.rs
tests/specs/comments/: trailing_whitespace.txt
tests/specs/declarations/: abstract_class.txt  annotation_arg_wrapping.txt  annotation_basic.txt  annotation_brace_spacing.txt  annotation_placement.txt  argument_list_nested_builders.txt  argument_list_pjf_parity.txt  argument_list_wrapping.txt  assignment_chain_inline.txt  blank_lines_after_class_brace.txt  blank_lines_import_to_class.txt  blank_lines_javadoc_fields.txt  blank_lines_javadoc_methods.txt  blank_lines_members.txt  class_basic.txt  class_extends.txt  class_extends_implements_wrapping.txt  (+41 more)
(+57 files in other folders)
