[package]
name = "dprint-plugin-java"
version = "0.1.0"
edition = "2024"
description = "Java code formatter plugin for dprint, inspired by palantir-java-format."
license = "Apache-2.0"
repository = "https://github.com/speakeasy-api/dprint-plugin-java"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
wasm = ["dprint-core/wasm", "serde_json"]

[dependencies]
anyhow = "1"
dprint-core = { version = "0.67", features = ["formatting"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tree-sitter = "0.24"
tree-sitter-java = "0.23"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
